# GC

./: CMakeLists.txt  CaseGenerator.cpp  CaseGenerator.h  Decoder.h  Encoder.cpp  Encoder.h  GF.h  README.md  main.cpp
